--- a/cuImage/Base.lproj/ShortcutsPreferencesPaneController.xib
+++ b/cuImage/Base.lproj/ShortcutsPreferencesPaneController.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="11762" systemVersion="16C67" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="11762" systemVersion="16D32" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="11762"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -21,13 +21,11 @@
                     <rect key="frame" x="207" y="20" width="130" height="19"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="130" id="Hjp-t0-6RF"/>
+                        <constraint firstAttribute="height" constant="19" id="gci-Eu-nWQ"/>
                     </constraints>
                 </customView>
                 <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" allowsCharacterPickerTouchBarItem="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BmV-gP-z0l">
-                    <rect key="frame" x="18" y="21" width="183" height="17"/>
-                    <constraints>
-                        <constraint firstAttribute="width" constant="179" id="dv4-JX-3fg"/>
-                    </constraints>
+                    <rect key="frame" x="18" y="22" width="183" height="17"/>
                     <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="Upload image on pasteboard:" id="2JL-FK-U4P">
                         <font key="font" metaFont="system"/>
                         <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
@@ -36,9 +34,8 @@
                 </textField>
             </subviews>
             <constraints>
-                <constraint firstItem="rLD-ry-Ahs" firstAttribute="centerY" secondItem="BmV-gP-z0l" secondAttribute="centerY" id="MMt-a5-vby"/>
-                <constraint firstAttribute="trailing" secondItem="rLD-ry-Ahs" secondAttribute="trailing" constant="163" id="OIa-mr-5TU"/>
                 <constraint firstItem="rLD-ry-Ahs" firstAttribute="top" secondItem="2qv-Z9-ACX" secondAttribute="top" constant="20" id="Uku-5a-5Uz"/>
+                <constraint firstItem="rLD-ry-Ahs" firstAttribute="top" secondItem="BmV-gP-z0l" secondAttribute="top" id="VAW-Nh-gxc"/>
                 <constraint firstItem="BmV-gP-z0l" firstAttribute="leading" secondItem="2qv-Z9-ACX" secondAttribute="leading" constant="20" id="dLU-fZ-4pu"/>
                 <constraint firstAttribute="bottom" secondItem="rLD-ry-Ahs" secondAttribute="bottom" constant="20" id="p2h-c5-fda"/>
                 <constraint firstItem="rLD-ry-Ahs" firstAttribute="leading" secondItem="BmV-gP-z0l" secondAttribute="trailing" constant="8" id="sbD-EA-gZo"/>
