--- a/cuImage/Base.lproj/GeneralPreferencesPaneController.xib
+++ b/cuImage/Base.lproj/GeneralPreferencesPaneController.xib
@@ -15,11 +15,11 @@
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
         <customObject id="-3" userLabel="Application" customClass="NSObject"/>
         <customView id="UqQ-L8-ZeT">
-            <rect key="frame" x="0.0" y="0.0" width="500" height="274"/>
+            <rect key="frame" x="0.0" y="0.0" width="500" height="262"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
             <subviews>
                 <button translatesAutoresizingMaskIntoConstraints="NO" id="TBY-dC-2CI" userLabel="Launch At Login">
-                    <rect key="frame" x="108" y="236" width="170" height="18"/>
+                    <rect key="frame" x="108" y="224" width="170" height="18"/>
                     <buttonCell key="cell" type="check" title="Launch cuImage at login" bezelStyle="regularSquare" imagePosition="left" state="on" inset="2" id="Kos-qa-NH8" userLabel="Launch At Login">
                         <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
                         <font key="font" metaFont="system"/>
@@ -29,7 +29,7 @@
                     </connections>
                 </button>
                 <button translatesAutoresizingMaskIntoConstraints="NO" id="2PE-0Y-HbB" userLabel="Keep Windows Always On Top">
-                    <rect key="frame" x="108" y="214" width="195" height="18"/>
+                    <rect key="frame" x="108" y="202" width="195" height="18"/>
                     <buttonCell key="cell" type="check" title="Keep windows always on top" bezelStyle="regularSquare" imagePosition="left" state="on" inset="2" id="ddc-7V-Wgv" userLabel="Keep Windows Always On Top">
                         <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
                         <font key="font" metaFont="system"/>
@@ -39,7 +39,7 @@
                     </connections>
                 </button>
                 <button translatesAutoresizingMaskIntoConstraints="NO" id="72M-YJ-QrW">
-                    <rect key="frame" x="108" y="180" width="176" height="18"/>
+                    <rect key="frame" x="108" y="168" width="176" height="18"/>
                     <buttonCell key="cell" type="check" title="Use Markdown-style URL" bezelStyle="regularSquare" imagePosition="left" state="on" inset="2" id="hBu-Pl-8bf">
                         <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
                         <font key="font" metaFont="system"/>
@@ -49,7 +49,7 @@
                     </connections>
                 </button>
                 <button translatesAutoresizingMaskIntoConstraints="NO" id="BcR-si-wtr">
-                    <rect key="frame" x="108" y="158" width="262" height="18"/>
+                    <rect key="frame" x="108" y="146" width="262" height="18"/>
                     <buttonCell key="cell" type="check" title="Automatically copy URL when uploaded" bezelStyle="regularSquare" imagePosition="left" state="on" inset="2" id="2BY-sC-PqD">
                         <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
                         <font key="font" metaFont="system"/>
@@ -69,7 +69,7 @@
                     </connections>
                 </button>
                 <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" allowsCharacterPickerTouchBarItem="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KGD-TB-aVV">
-                    <rect key="frame" x="28" y="237" width="76" height="17"/>
+                    <rect key="frame" x="28" y="225" width="76" height="17"/>
                     <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="Application:" id="oyf-rG-l1O">
                         <font key="font" metaFont="system"/>
                         <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
@@ -77,8 +77,8 @@
                     </textFieldCell>
                 </textField>
                 <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" allowsCharacterPickerTouchBarItem="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Y86-06-CwQ">
-                    <rect key="frame" x="70" y="181" width="34" height="17"/>
-                    <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="URL:" id="TB5-Kl-Qnw">
+                    <rect key="frame" x="52" y="169" width="52" height="17"/>
+                    <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="Upload:" id="TB5-Kl-Qnw">
                         <font key="font" metaFont="system"/>
                         <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
                         <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
@@ -107,14 +107,6 @@
                     <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="Notification preferences are shown in macOS System Preferences." id="TX6-pu-fEP">
                         <font key="font" metaFont="smallSystem"/>
                         <color key="textColor" name="secondaryLabelColor" catalog="System" colorSpace="catalog"/>
-                        <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
-                    </textFieldCell>
-                </textField>
-                <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" allowsCharacterPickerTouchBarItem="NO" translatesAutoresizingMaskIntoConstraints="NO" id="G2Q-MN-4qb">
-                    <rect key="frame" x="53" y="125" width="51" height="17"/>
-                    <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="Format:" id="1ko-W3-yFJ">
-                        <font key="font" metaFont="system"/>
-                        <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
                         <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                     </textFieldCell>
                 </textField>
@@ -162,8 +154,7 @@
                 <constraint firstItem="TBY-dC-2CI" firstAttribute="top" secondItem="UqQ-L8-ZeT" secondAttribute="top" constant="22" id="ILi-I3-I4v"/>
                 <constraint firstItem="kLR-Yv-i4e" firstAttribute="leading" secondItem="TBY-dC-2CI" secondAttribute="leading" id="JId-ih-TOX"/>
                 <constraint firstItem="Evl-Ft-h9U" firstAttribute="top" secondItem="8VX-db-nVh" secondAttribute="bottom" constant="8" id="Kbx-oW-TJT"/>
-                <constraint firstItem="duc-9O-CXc" firstAttribute="leading" secondItem="G2Q-MN-4qb" secondAttribute="trailing" constant="8" id="MyR-4z-3TP"/>
-                <constraint firstItem="duc-9O-CXc" firstAttribute="top" secondItem="BcR-si-wtr" secondAttribute="bottom" constant="20" id="NdA-OC-69T"/>
+                <constraint firstItem="duc-9O-CXc" firstAttribute="top" secondItem="BcR-si-wtr" secondAttribute="bottom" constant="8" id="NdA-OC-69T"/>
                 <constraint firstItem="2PE-0Y-HbB" firstAttribute="leading" secondItem="TBY-dC-2CI" secondAttribute="leading" id="OqF-Ap-QHK"/>
                 <constraint firstItem="KdG-Rx-LZi" firstAttribute="top" secondItem="Evl-Ft-h9U" secondAttribute="bottom" constant="20" id="UME-aQ-Ubf"/>
                 <constraint firstItem="PnD-in-ejI" firstAttribute="top" secondItem="KdG-Rx-LZi" secondAttribute="bottom" constant="6" id="UyR-kT-EtZ"/>
@@ -175,7 +166,6 @@
                 <constraint firstItem="72M-YJ-QrW" firstAttribute="leading" secondItem="TBY-dC-2CI" secondAttribute="leading" id="aVM-Cb-NMI"/>
                 <constraint firstItem="KdG-Rx-LZi" firstAttribute="top" secondItem="FzQ-EO-adz" secondAttribute="top" id="bVI-W2-f4i"/>
                 <constraint firstItem="duc-9O-CXc" firstAttribute="leading" secondItem="TBY-dC-2CI" secondAttribute="leading" id="c7B-hF-ccp"/>
-                <constraint firstItem="duc-9O-CXc" firstAttribute="baseline" secondItem="G2Q-MN-4qb" secondAttribute="baseline" id="em9-Ws-mr6"/>
                 <constraint firstItem="TBY-dC-2CI" firstAttribute="leading" secondItem="KGD-TB-aVV" secondAttribute="trailing" constant="8" id="gmB-ii-0mc"/>
                 <constraint firstItem="PnD-in-ejI" firstAttribute="leading" secondItem="KdG-Rx-LZi" secondAttribute="leading" id="h6A-Iw-Nlk"/>
                 <constraint firstItem="72M-YJ-QrW" firstAttribute="baseline" secondItem="Y86-06-CwQ" secondAttribute="baseline" id="jNc-xP-8FH"/>
