--- a/cuImage/Base.lproj/GeneralPreferencesPaneController.xib
+++ b/cuImage/Base.lproj/GeneralPreferencesPaneController.xib
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="11762" systemVersion="16D32" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
     <dependencies>
+        <deployment identifier="macosx"/>
         <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="11762"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -15,11 +16,11 @@
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
         <customObject id="-3" userLabel="Application" customClass="NSObject"/>
         <customView id="UqQ-L8-ZeT">
-            <rect key="frame" x="0.0" y="0.0" width="500" height="262"/>
+            <rect key="frame" x="0.0" y="0.0" width="500" height="284"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
             <subviews>
                 <button translatesAutoresizingMaskIntoConstraints="NO" id="TBY-dC-2CI" userLabel="Launch At Login">
-                    <rect key="frame" x="108" y="224" width="170" height="18"/>
+                    <rect key="frame" x="108" y="246" width="170" height="18"/>
                     <buttonCell key="cell" type="check" title="Launch cuImage at login" bezelStyle="regularSquare" imagePosition="left" state="on" inset="2" id="Kos-qa-NH8" userLabel="Launch At Login">
                         <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
                         <font key="font" metaFont="system"/>
@@ -29,7 +30,7 @@
                     </connections>
                 </button>
                 <button translatesAutoresizingMaskIntoConstraints="NO" id="2PE-0Y-HbB" userLabel="Keep Windows Always On Top">
-                    <rect key="frame" x="108" y="202" width="195" height="18"/>
+                    <rect key="frame" x="108" y="224" width="195" height="18"/>
                     <buttonCell key="cell" type="check" title="Keep windows always on top" bezelStyle="regularSquare" imagePosition="left" state="on" inset="2" id="ddc-7V-Wgv" userLabel="Keep Windows Always On Top">
                         <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
                         <font key="font" metaFont="system"/>
@@ -39,7 +40,7 @@
                     </connections>
                 </button>
                 <button translatesAutoresizingMaskIntoConstraints="NO" id="72M-YJ-QrW">
-                    <rect key="frame" x="108" y="168" width="176" height="18"/>
+                    <rect key="frame" x="108" y="190" width="176" height="18"/>
                     <buttonCell key="cell" type="check" title="Use Markdown-style URL" bezelStyle="regularSquare" imagePosition="left" state="on" inset="2" id="hBu-Pl-8bf">
                         <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
                         <font key="font" metaFont="system"/>
@@ -49,7 +50,7 @@
                     </connections>
                 </button>
                 <button translatesAutoresizingMaskIntoConstraints="NO" id="BcR-si-wtr">
-                    <rect key="frame" x="108" y="146" width="262" height="18"/>
+                    <rect key="frame" x="108" y="168" width="262" height="18"/>
                     <buttonCell key="cell" type="check" title="Automatically copy URL when uploaded" bezelStyle="regularSquare" imagePosition="left" state="on" inset="2" id="2BY-sC-PqD">
                         <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
                         <font key="font" metaFont="system"/>
@@ -59,7 +60,7 @@
                     </connections>
                 </button>
                 <button translatesAutoresizingMaskIntoConstraints="NO" id="duc-9O-CXc">
-                    <rect key="frame" x="108" y="124" width="314" height="18"/>
+                    <rect key="frame" x="108" y="146" width="314" height="18"/>
                     <buttonCell key="cell" type="check" title="Use JPEG to compress images before uploading" bezelStyle="regularSquare" imagePosition="left" state="on" inset="2" id="Nj0-xe-a4b">
                         <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
                         <font key="font" metaFont="system"/>
@@ -69,7 +70,7 @@
                     </connections>
                 </button>
                 <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" allowsCharacterPickerTouchBarItem="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KGD-TB-aVV">
-                    <rect key="frame" x="28" y="225" width="76" height="17"/>
+                    <rect key="frame" x="28" y="247" width="76" height="17"/>
                     <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="Application:" id="oyf-rG-l1O">
                         <font key="font" metaFont="system"/>
                         <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
@@ -77,7 +78,7 @@
                     </textFieldCell>
                 </textField>
                 <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" allowsCharacterPickerTouchBarItem="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Y86-06-CwQ">
-                    <rect key="frame" x="52" y="169" width="52" height="17"/>
+                    <rect key="frame" x="52" y="191" width="52" height="17"/>
                     <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="Upload:" id="TB5-Kl-Qnw">
                         <font key="font" metaFont="system"/>
                         <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
@@ -111,7 +112,7 @@
                     </textFieldCell>
                 </textField>
                 <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" allowsCharacterPickerTouchBarItem="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kLR-Yv-i4e">
-                    <rect key="frame" x="108" y="101" width="51" height="17"/>
+                    <rect key="frame" x="108" y="123" width="51" height="17"/>
                     <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="Quality:" id="BaS-tZ-01I">
                         <font key="font" metaFont="system"/>
                         <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
@@ -119,7 +120,7 @@
                     </textFieldCell>
                 </textField>
                 <slider verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="8VX-db-nVh">
-                    <rect key="frame" x="164" y="100" width="150" height="18"/>
+                    <rect key="frame" x="164" y="122" width="150" height="18"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="150" id="CCA-VL-VCP"/>
                     </constraints>
@@ -129,7 +130,7 @@
                     </connections>
                 </slider>
                 <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" allowsCharacterPickerTouchBarItem="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Evl-Ft-h9U">
-                    <rect key="frame" x="162" y="79" width="60" height="13"/>
+                    <rect key="frame" x="162" y="101" width="60" height="13"/>
                     <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="Smaller File" id="VTf-dM-p5C">
                         <font key="font" metaFont="system" size="10"/>
                         <color key="textColor" name="secondaryLabelColor" catalog="System" colorSpace="catalog"/>
@@ -137,9 +138,17 @@
                     </textFieldCell>
                 </textField>
                 <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" allowsCharacterPickerTouchBarItem="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KzJ-ja-Eka">
-                    <rect key="frame" x="245" y="79" width="71" height="13"/>
+                    <rect key="frame" x="245" y="101" width="71" height="13"/>
                     <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="Better Quality" id="gUs-Wi-8Ng">
                         <font key="font" metaFont="system" size="10"/>
+                        <color key="textColor" name="secondaryLabelColor" catalog="System" colorSpace="catalog"/>
+                        <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
+                    </textFieldCell>
+                </textField>
+                <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" allowsCharacterPickerTouchBarItem="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SLW-6U-XrC">
+                    <rect key="frame" x="108" y="79" width="337" height="14"/>
+                    <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="Note: The JPEG compression doesn't support compressing GIF." id="t1F-Ck-qHC">
+                        <font key="font" metaFont="smallSystem"/>
                         <color key="textColor" name="secondaryLabelColor" catalog="System" colorSpace="catalog"/>
                         <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                     </textFieldCell>
@@ -156,8 +165,8 @@
                 <constraint firstItem="Evl-Ft-h9U" firstAttribute="top" secondItem="8VX-db-nVh" secondAttribute="bottom" constant="8" id="Kbx-oW-TJT"/>
                 <constraint firstItem="duc-9O-CXc" firstAttribute="top" secondItem="BcR-si-wtr" secondAttribute="bottom" constant="8" id="NdA-OC-69T"/>
                 <constraint firstItem="2PE-0Y-HbB" firstAttribute="leading" secondItem="TBY-dC-2CI" secondAttribute="leading" id="OqF-Ap-QHK"/>
-                <constraint firstItem="KdG-Rx-LZi" firstAttribute="top" secondItem="Evl-Ft-h9U" secondAttribute="bottom" constant="20" id="UME-aQ-Ubf"/>
                 <constraint firstItem="PnD-in-ejI" firstAttribute="top" secondItem="KdG-Rx-LZi" secondAttribute="bottom" constant="6" id="UyR-kT-EtZ"/>
+                <constraint firstItem="SLW-6U-XrC" firstAttribute="leading" secondItem="TBY-dC-2CI" secondAttribute="leading" id="V1L-3Y-sOl"/>
                 <constraint firstItem="BcR-si-wtr" firstAttribute="leading" secondItem="TBY-dC-2CI" secondAttribute="leading" id="Vfl-6p-4ci"/>
                 <constraint firstItem="KdG-Rx-LZi" firstAttribute="leading" secondItem="TBY-dC-2CI" secondAttribute="leading" id="W6J-n2-tsX"/>
                 <constraint firstItem="BcR-si-wtr" firstAttribute="top" secondItem="72M-YJ-QrW" secondAttribute="bottom" constant="8" id="XEc-C4-CZJ"/>
@@ -166,6 +175,7 @@
                 <constraint firstItem="72M-YJ-QrW" firstAttribute="leading" secondItem="TBY-dC-2CI" secondAttribute="leading" id="aVM-Cb-NMI"/>
                 <constraint firstItem="KdG-Rx-LZi" firstAttribute="top" secondItem="FzQ-EO-adz" secondAttribute="top" id="bVI-W2-f4i"/>
                 <constraint firstItem="duc-9O-CXc" firstAttribute="leading" secondItem="TBY-dC-2CI" secondAttribute="leading" id="c7B-hF-ccp"/>
+                <constraint firstItem="KdG-Rx-LZi" firstAttribute="top" secondItem="SLW-6U-XrC" secondAttribute="bottom" constant="20" id="cZH-kD-CSk"/>
                 <constraint firstItem="TBY-dC-2CI" firstAttribute="leading" secondItem="KGD-TB-aVV" secondAttribute="trailing" constant="8" id="gmB-ii-0mc"/>
                 <constraint firstItem="PnD-in-ejI" firstAttribute="leading" secondItem="KdG-Rx-LZi" secondAttribute="leading" id="h6A-Iw-Nlk"/>
                 <constraint firstItem="72M-YJ-QrW" firstAttribute="baseline" secondItem="Y86-06-CwQ" secondAttribute="baseline" id="jNc-xP-8FH"/>
@@ -176,7 +186,7 @@
                 <constraint firstItem="8VX-db-nVh" firstAttribute="trailing" secondItem="KzJ-ja-Eka" secondAttribute="trailing" id="wwv-66-JJ4"/>
                 <constraint firstItem="TBY-dC-2CI" firstAttribute="baseline" secondItem="KGD-TB-aVV" secondAttribute="baseline" id="ymK-XY-c2y"/>
             </constraints>
-            <point key="canvasLocation" x="108" y="481"/>
+            <point key="canvasLocation" x="108" y="499"/>
         </customView>
         <userDefaultsController representsSharedInstance="YES" id="jgw-3M-z5z"/>
     </objects>
